# human-machine-difficulty-kit

./: .gitignore  CITATION.cff  LICENSE  MANIFEST_CODELIST.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
code/: Makefile  filelist.txt  pred_candidates.txt  requirements.txt  run_4o_grid.sh  run_all.sh  runner.py
code/docs/: APPENDIX_GENERATED.md  LEAKAGE_AUDIT.md  OVERLAP_CASE_STUDIES.md
code/experiments_20251029/: align_index.py  align_index_labeled.py  analyze_divergence_full.py  analyze_synthetic_divergence.py  apply_alignment_head.py  apply_alignment_head_pair.py  apply_alignment_head_race_from_eedi.py  apply_joint_head_to_all.py  apply_race_head_to_eedi.py  compare_models.py  csv_to_markdown.py  ednet_compare_two_samples.py  ednet_flatten_any.py  ednet_flatten_from_dir_uid.py  ednet_flatten_from_dir_uid_fixed.py  ednet_flatten_kt1_csv.py  ednet_flatten_kt1_csv_small.py  ednet_label_covaware.py  ednet_make_balanced_subset.py  ednet_make_proxy_labels.py  ednet_make_proxy_labels_big.py  ednet_make_proxy_labels_covaware.py  ednet_make_scaling_table.py  ednet_plot_scaling.py  ednet_scale_run.sh  ednet_summarize_full_proxy.py  eedi_alignment_baselines.py  eedi_batch_analyze.py  eedi_behavior_descriptive.py  eedi_behavior_regression.py  eedi_calibration_ablation.py  eedi_extract_text_features.py  eedi_inspect_crosstab.py  eedi_make_proxy_labels.py  eedi_proxy_vs_model.py  (+43 more)
code/hmdkit-open_20251107_1024/: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: EDNET_ANSWER_KEY_STATUS.md  FIGLIST.md
tests/: test_imports.py
(+126 files in other folders)
